<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FinalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="32sp" />

    <ListView
        android:id="@+id/list_scores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        android:text="@string/resultado_falado"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_quit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_quit_game_text"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>