<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/text_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_round_number"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:text="@string/textview_gameplay_text"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image_pokemon_sprite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_pokemon_sprite_desc"
        android:src="@drawable/ic_launcher_background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:stretchColumns="*">

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_1"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_2"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_3"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_4"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_5"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pokemon_6"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_pokemon_text"
                android:textSize="14sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:stretchColumns="*">

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_1"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_2"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_3"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_4"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_5"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_xp_6"
                style="?materialButtonOutlinedStyle"
                android:checkable="true"
                android:padding="3dip"
                android:text="@string/button_xp_text"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:enabled="false"
        android:text="@string/button_confirm_text"
        android:textSize="24sp" />

</LinearLayout>