<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_pokeball_top_background"

    android:orientation="vertical"
    tools:context=".TitleActivity">

    <View
        android:id="@+id/view_pokeball_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_pokeball_divider_background">

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:background="@color/black" />

        <View
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/title_pokeball_circle_background" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_pokemon_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pokemon_logo_description"
            android:src="@drawable/ic_pokemon_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16sp"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_game_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/button_game_start_text"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/white"
                android:text="@string/score_board"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
